--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -846,12 +846,12 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
           <p>Please indicate which of these criteria applies to make you LEAPS eligible. These will be discussed
           and confirmed at your interview.</p>
           <p id="can_claim_simd" style="display: none;">(Your SIMD eligibility has already been set for you, based on the post code you provided above.)</p>
-          <p id="can_claim_school" style="display: none;">(Your school group already been set for you, based on the school you provided above.)</p>
+          <p id="can_claim_school" style="display: none;">(Your school group has already been set for you, based on the school you provided above.)</p>
 	    </div>
 	    <div class="col-sm-8">
       		<br><br>
           <input type="checkbox" id="claimed_simd20" name="claimed_simd20" style="margin-top:-3px;">
-          SIMD 20 (you would have had an alert when you filled out your postcode above)
+          SIMD 20 (this is based on your post code and would be automatically checked if appropriate)
 
       		<br><br>
           <input type="checkbox" id="claimed_group_school" name="claimed_group_school" style="margin-top:-3px;">
