--- a/portality/templates/leaps/universities/index.html
+++ b/portality/templates/leaps/universities/index.html
@@ -5,7 +5,7 @@
 <script>
 jQuery(document).ready(function() { 
     $(".tablesorter").tablesorter({
-        "dateFormat": "dd/mm/yyyy", // TODO may need to update tablesorter to newer version to get this to work https://mottie.github.io/tablesorter/docs/example-option-date-format.html
+        "dateFormat": "uk", // TODO may need to update tablesorter to newer version to get this to work https://mottie.github.io/tablesorter/docs/example-option-date-format.html
         "sortList": [[5,1]],
         "headers":{
             3: {"sorter": "shortDate" },
