--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -60,7 +60,7 @@ jQuery(document).ready(function() {
 	                    <td><input type="checkbox" name="date_of_birth"> Date of birth</td>
 	                    <td><input type="checkbox" name="school_house"> School house</td>
 	                    <td><input type="checkbox" name="interests"> Interests</td>
-                		<td><input type="checkbox" name="looked_after_child"> Looked after child</td>
+                		<td><input type="checkbox" name="looked_after_child"> Care experienced</td>
                     </tr>
         	        <tr>
 	                    <td><input type="checkbox" name="scn_number"> SCN number</td>
