--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -4,20 +4,26 @@
 	  		<img src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
 	    </div>
 	
-	    <div class="span9">
-				<p>Lothians Equal Access Programme for Schools &middot; Room 1/06 Old Moray House &middot; Holyrood Road &middot; Edinburgh &middot; EH8 8AQ</p>
+	    <div class="span6">
 				<p>
-					{% if current_user %}<a href="/account/policy">User Access Terms</a> | {% endif %}
-					<a href="/policy">Privacy policy</a> | 
-					<a href="/survey">Survey form</a> | 
-					<a href="/schools">Schools</a> | 
-					<a href="/universities">Universities</a>
+					Lothians Equal Access Programme for Schools<br>
+					Room 1/06 Old Moray House<br>
+					Holyrood Road<br>
+					Edinburgh EH8 8AQ<br>
+					0131 650 4676<br>
+					<a href="http://www.leapsonline.org/contact-us">Contact us</a><br>
+					<a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a><br>
+					<a href="http://leapsonline.org">leapsonline.org</a><br>
 				</p>
-				<p>
-					<a href="http://leapsonline.org">leapsonline.org</a> | 
-					<a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a> | 
-					<a href="http://www.leapsonline.org/contact-us">Contact us</a> | 
-					0131 650 4676
+			</div>
+
+	    <div class="span3">
+				<p style="text-align:right;">
+					{% if current_user %}<a href="/account/policy">User Access Terms</a><br>{% endif %}
+					<a href="/policy">Privacy policy</a><br>
+					<a href="/survey">Survey form</a><br>
+					<a href="/schools">Schools</a><br>
+					<a href="/universities">Universities</a>
 				</p>
 	    </div>
 	   </div>
