--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -4,19 +4,25 @@
 	  		<img src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
 	    </div>
 	
-	    <div class="span6">
+	    <div class="span4">
 				<p>
 					Lothians Equal Access Programme for Schools<br>
 					Room 1/06 Old Moray House<br>
 					Holyrood Road<br>
 					Edinburgh EH8 8AQ<br>
-					0131 650 4676<br>
-					<a href="http://www.leapsonline.org/contact-us">Contact us</a><br>
-					<a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a><br>
-					<a href="http://leapsonline.org">leapsonline.org</a><br>
+					0131 650 4676
 				</p>
 			</div>
 
+	    <div class="span4">
+				<p>
+					<br><br>
+					<a href="http://www.leapsonline.org/contact-us">Contact us</a><br>
+					<a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a><br>
+					<a href="http://leapsonline.org">leapsonline.org</a>
+				</p>
+			</div>
+			
 	    <div class="span3">
 				<p style="text-align:right;">
 					{% if current_user %}<a href="/account/policy">User Access Terms</a><br>{% endif %}
