--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -4,7 +4,7 @@
 	  		<img src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
 	    </div>
 	
-	    <div class="span5">
+	    <div class="span5" id="footer_address">
 				<p>
 					Lothians Equal Access Programme for Schools<br>
 					Room 1/06 Old Moray House<br>
