--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -32,4 +32,15 @@
     </div>
   </div>
 
+<style>
+  #footer_logo {
+    display: none;
+  }
+</style>
+
+<script>
+  $(document).ready(function() {
+    $('#footer_address').removeClass('span5').addClass('span8')
+  });
+</script>
 {% endblock %}
