--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -14,7 +14,7 @@
 				</p>
 			</div>
 
-	    <div class="span2">
+	    <div class="span2" id="footer_contacts">
 				<p>
 					<a href="http://www.leapsonline.org/contact-us">Contact us</a><br>
 					<a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a><br>
