--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -40,7 +40,8 @@
 
 <script>
   $(document).ready(function() {
-    $('#footer_address').removeClass('span5').addClass('span8')
+    $('#footer_address').removeClass('span5').addClass('span6');
+    $('#footer_contacts').removeClass('span2').addClass('span3');
   });
 </script>
 {% endblock %}
